# labelgun

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  base.Dockerfile  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.github/scripts/: run-test.sh
.github/workflows/: tests.yaml  update-img-and-tests.yaml
examples/: example1.py
examples/integrate_with_django/: pyproject.toml
examples/integrate_with_django/application/: asgi.py  settings.py  urls.py  wsgi.py
examples/integrate_with_django/calc/: logs.py  urls.py  views.py
examples/integrate_with_logging/: logger.py  logs.py  main.py  pyproject.toml
labelgun/: __init__.py  event.py  label.py
labelgun/integrations/: logging_utils.py  structlog_utils.py
tests/: conftest.py  test_event.py  test_integrations.py
