[tool.poetry]
name = "integrate_with_django"
version = "0.1.0"
description = ""
authors = ["Aleksey Petrunnik <apetrunnik@usetech.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "=3.2.5"
labelgun = { git = "https://gitlab.usetech.ru/pub/labelgun.git", extras = ["logger"], tag = "0.1.8" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
