[tool.poetry]
name = "integrate_with_logging"
version = "0.1.0"
description = ""
authors = ["Aleksey Petrunnik <apetrunnik@usetech.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
labelgun = { git = "https://gitlab.usetech.ru/pub/labelgun.git", extras = ["logger"], tag = "0.1.8" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
